--- a/LoveFinder/LoveFinder/Views/RegisterPage.xaml
+++ b/LoveFinder/LoveFinder/Views/RegisterPage.xaml
@@ -5,19 +5,33 @@
              NavigationPage.HasNavigationBar="True">
     <ContentPage.Content>
         <ScrollView>
-        <StackLayout Background="#1b1b1b">
-            <Image Source="logo.png" Margin="50,0,50,0"/>
-            <Entry Style="{StaticResource Inputfield}" x:Name="Firstname" Placeholder="Voornaam:" Margin="50,10,50,0"/>
-            <Entry Style="{StaticResource Inputfield}" x:Name="Lastname" Placeholder="Achternaam:" Margin="50,5,50,0"/>
-            <Entry Style="{StaticResource Inputfield}" x:Name="Birthday" Placeholder="Leeftijd:" Margin="50,5,50,0"/>
-            <Entry Style="{StaticResource Inputfield}" x:Name="Gender" Placeholder="Geslacht:" Margin="50,5,50,0"/>
-            <Entry Style="{StaticResource Inputfield}" x:Name="SexualOrientation" Placeholder="Seksuele voorkeur:" Margin="50,5,50,0"/>
-            <Entry Style="{StaticResource Inputfield}" x:Name="Mail" Placeholder="E-Mail:" Margin="50,5,50,0"/>
-            <Entry Style="{StaticResource Inputfield}" x:Name="Password1" Placeholder="Wachtwoord:" IsPassword="True" Margin="50,5,50,0"/>
-            <Entry Style="{StaticResource Inputfield}" x:Name="Password2" Placeholder="Valideer wachtwoord" IsPassword="True" Margin="50,5,50,0"/>
-            <Button Style="{StaticResource Orangebtn}" x:Name="Savebtn" Text="Maak account" Clicked="Savebtn_Clicked" Margin="50,10,50,0"/>
+            <StackLayout Background="#1b1b1b">
+                <Image Source="logo.png" Margin="50,0,50,0"/>
+                <Entry Style="{StaticResource Inputfield}" x:Name="Firstname" Placeholder="Voornaam:" Margin="50,10,50,0"/>
+                <Entry Style="{StaticResource Inputfield}" x:Name="Lastname" Placeholder="Achternaam:" Margin="50,5,50,0"/>
+                <Entry Style="{StaticResource Inputfield}" x:Name="Birthday" Placeholder="Leeftijd:" Margin="50,5,50,0"/>
+                <Picker x:Name="Gender" Title="Geslacht:" Margin="50,5,50,0" Style="{StaticResource Pickerstyle}">
+                    <Picker.Items>
+                        <x:String>Man</x:String>
+                        <x:String>Vrouw</x:String>
+                        <x:String>Anders</x:String>
+                    </Picker.Items>
+                </Picker>
+                <Picker x:Name="SexualOrientation" Title="Seksuele voorkeur:" Margin="50,5,50,0" Style="{StaticResource Pickerstyle}">
+                    <Picker.Items>
+                        <x:String>Hetero</x:String>
+                        <x:String>Homo</x:String>
+                        <x:String>Lesbisch</x:String>
+                        <x:String>Bi</x:String>
+                        <x:String>Anders</x:String>
+                    </Picker.Items>
+                </Picker>
+                <Entry Style="{StaticResource Inputfield}" x:Name="Mail" Placeholder="E-Mail:" Margin="50,5,50,0"/>
+                <Entry Style="{StaticResource Inputfield}" x:Name="Password1" Placeholder="Wachtwoord:" IsPassword="True" Margin="50,5,50,0"/>
+                <Entry Style="{StaticResource Inputfield}" x:Name="Password2" Placeholder="Valideer wachtwoord" IsPassword="True" Margin="50,5,50,0"/>
+                <Button Style="{StaticResource Orangebtn}" x:Name="Savebtn" Text="Maak account" Clicked="Savebtn_Clicked" Margin="50,10,50,0"/>
                 <Label BackgroundColor="#1b1b1b"></Label>
-        </StackLayout>
+            </StackLayout>
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
