--- a/LoveFinder/LoveFinder/Views/EditProfilePage.xaml
+++ b/LoveFinder/LoveFinder/Views/EditProfilePage.xaml
@@ -4,21 +4,25 @@
              x:Class="LoveFinder.Views.EditProfilePage"
              NavigationPage.HasNavigationBar="false">
     <ContentPage.Content>
-        <StackLayout BackgroundColor="#1b1b1b">
-            <Frame CornerRadius="20" Padding="0" Margin="5,5,240,50">
+        <ScrollView>
+            <StackLayout BackgroundColor="#1b1b1b">
+                <Frame CornerRadius="20" Padding="0" Margin="5,25,240,110">
                     <Image Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" NumberOfTapsRequired="1"/>
                         </Image.GestureRecognizers>
                     </Image>
                 </Frame>
-                <Label x:Name="Firstname" Text="Hier komt de voornaam" TextColor="#ffff" Margin="140,-170,0,0" FontSize="Medium"/>
-            <Label x:Name="Lastname" Text="Hier komt de achternaam" TextColor="#ffff" Margin="140,10,0,0" FontSize="Medium"/>
-            <Entry Style="{StaticResource Inputfield}" BackgroundColor="#1b1b1b" x:Name="Bio" Placeholder="Bio:" Margin="30,50,30,10"/>
-            <Entry Style="{StaticResource Inputfield}" BackgroundColor="#1b1b1b" x:Name="Age" Placeholder="Leeftijd" Margin="30,10,30,50"/>
-            <Button Style="{StaticResource Orangebtn}" x:Name="Save" Text="Opslaan" Clicked="Save_Clicked"/>
-            <Button Style="{StaticResource Orangebtn}" x:Name="Signout" Text="Uitloggen" Clicked="Signout_Clicked" Margin="60,89,60,1"/>
-            <Button Style="{StaticResource Redbtn}" x:Name="Remove" Text="Account verwijderen" Clicked="Remove_Clicked" Margin="60,0,60,0"/>
-        </StackLayout>
+                <Label x:Name="Firstname" Text="Hier komt de voornaam" TextColor="#ffff" Margin="140,-200,0,0" FontSize="Medium"/>
+                <Label x:Name="Lastname" Text="Hier komt de achternaam" TextColor="#ffff" Margin="140,10,0,30" FontSize="Medium"/>
+                <Label Text="Bio:" TextColor="#ffff" FontSize="Medium" Margin="30,0,0,0"/>
+                <Entry Style="{StaticResource Inputfield}" BackgroundColor="#1b1b1b" x:Name="Bio" Placeholder="Bio:" Margin="30,0,30,10"/>
+                <Label Text="Leeftijd:" TextColor="#ffff" FontSize="Medium" Margin="30,0,0,0"/>
+                <Entry Style="{StaticResource Inputfield}" BackgroundColor="#1b1b1b" x:Name="Age" Placeholder="Leeftijd" Margin="30,10,30,20"/>
+                <Button Style="{StaticResource Orangebtn}" x:Name="Save" Text="Opslaan" Clicked="Save_Clicked"/>
+                <Button Style="{StaticResource Orangebtn}" x:Name="Signout" Text="Uitloggen" Clicked="Signout_Clicked" Margin="60,89,60,1"/>
+                <Button Style="{StaticResource Redbtn}" x:Name="Remove" Text="Account verwijderen" Clicked="Remove_Clicked" Margin="60,0,60,0"/>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
