--- a/LoveFinder/LoveFinder/Views/EditProfilePage.xaml
+++ b/LoveFinder/LoveFinder/Views/EditProfilePage.xaml
@@ -13,8 +13,8 @@
                         </Image.GestureRecognizers>
                     </Image>
                 </Frame>
-                <Label x:Name="Firstname" Text="Hier komt de voornaam" TextColor="#ffff" Margin="140,-200,0,0" FontSize="Medium"/>
-                <Label x:Name="Lastname" Text="Hier komt de achternaam" TextColor="#ffff" Margin="140,10,0,30" FontSize="Medium"/>
+                <Label x:Name="Firstname" TextColor="#ffff" Margin="140,-200,0,0" FontSize="Medium"/>
+                <Label x:Name="Lastname" TextColor="#ffff" Margin="140,10,0,30" FontSize="Medium"/>
                 <Label Text="Bio:" TextColor="#ffff" FontSize="Medium" Margin="30,0,0,0"/>
                 <Entry Style="{StaticResource Inputfield}" BackgroundColor="#1b1b1b" x:Name="Bio" Placeholder="Bio:" Margin="30,0,30,10"/>
                 <Label Text="Leeftijd:" TextColor="#ffff" FontSize="Medium" Margin="30,0,0,0"/>
