--- a/LoveFinder/LoveFinder/Views/EditProfilePage.xaml
+++ b/LoveFinder/LoveFinder/Views/EditProfilePage.xaml
@@ -18,7 +18,7 @@
                 <Label Text="Bio:" TextColor="#ffff" FontSize="Medium" Margin="30,0,0,0"/>
                 <Entry Style="{StaticResource Inputfield}" BackgroundColor="#1b1b1b" x:Name="Bio" Placeholder="Bio:" Margin="30,0,30,10"/>
                 <Label Text="Leeftijd:" TextColor="#ffff" FontSize="Medium" Margin="30,0,0,0"/>
-                <Entry Style="{StaticResource Inputfield}" BackgroundColor="#1b1b1b" x:Name="Age" Placeholder="Leeftijd" Margin="30,10,30,20"/>
+                <Entry Style="{StaticResource Inputfield}" BackgroundColor="#1b1b1b" x:Name="Age" Keyboard="Numeric" Placeholder="Leeftijd" Margin="30,10,30,20"/>
                 <Button Style="{StaticResource Orangebtn}" x:Name="Save" Text="Opslaan" Clicked="Save_Clicked"/>
                 <Button Style="{StaticResource Orangebtn}" x:Name="Signout" Text="Uitloggen" Clicked="Signout_Clicked" Margin="60,89,60,1"/>
                 <Button Style="{StaticResource Redbtn}" x:Name="Remove" Text="Account verwijderen" Clicked="Remove_Clicked" Margin="60,0,60,0"/>
