--- a/LoveFinder/LoveFinder/Views/EditPicturePage.xaml
+++ b/LoveFinder/LoveFinder/Views/EditPicturePage.xaml
@@ -6,35 +6,35 @@
         <ScrollView>
         <StackLayout BackgroundColor="#1b1b1b">
             <Frame CornerRadius="20" Padding="0" Margin="70,5,70,10">
-                <Image Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image x:Name="pic1" Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" NumberOfTapsRequired="1"/>
                     </Image.GestureRecognizers>
                 </Image>
             </Frame>
             <Frame CornerRadius="20" Padding="0" Margin="35,0,200,0">
-                <Image Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image x:Name="pic2" Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" NumberOfTapsRequired="1"/>
                     </Image.GestureRecognizers>
                 </Image>
             </Frame>
             <Frame CornerRadius="20" Padding="0" Margin="200,-131,35,0">
-                <Image Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image x:Name="pic3" Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" NumberOfTapsRequired="1"/>
                     </Image.GestureRecognizers>
                 </Image>
             </Frame>
             <Frame CornerRadius="20" Padding="0" Margin="35,30,200,0">
-                <Image Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image x:Name="pic4" Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" NumberOfTapsRequired="1"/>
                     </Image.GestureRecognizers>
                 </Image>
             </Frame>
             <Frame CornerRadius="20" Padding="0" Margin="200,-131,35,30">
-                <Image Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image x:Name="pic5" Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" NumberOfTapsRequired="1"/>
                     </Image.GestureRecognizers>
