--- a/LoveFinder/LoveFinder/Views/UploadPicturePage.xaml
+++ b/LoveFinder/LoveFinder/Views/UploadPicturePage.xaml
@@ -5,7 +5,7 @@
     <ContentPage.Content>
         <StackLayout BackgroundColor="#1b1b1b">
             <Frame CornerRadius="20" Padding="0" Margin="50,5,50,10">
-                <Image Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center"/>
+                <Image x:Name="picture" Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center"/>
             </Frame>
             <Button Style="{StaticResource Orangebtn}" x:Name="Upload" Text="Foto uploaden" Clicked="Upload_Clicked" Margin="50,90,50,0"/>
             <Button Style="{StaticResource Orangebtn}" x:Name="Back" Text="Terug" Clicked="Back_Clicked" Margin="50,10,50,0"/>
