--- a/LoveFinder/LoveFinder/Views/WriteMessagePage.xaml
+++ b/LoveFinder/LoveFinder/Views/WriteMessagePage.xaml
@@ -1,12 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:LoveFinder"
              x:Class="LoveFinder.Views.WriteMessagePage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <DataTemplate x:Key="fromTemplate">
+                <ViewCell>
+                    <ViewCell.View>
+                        <StackLayout Orientation="Horizontal" Spacing="10" HorizontalOptions="End">
+                            <Label Text="{Binding sendDate}"/>
+                            <Label Text="{Binding message}"/>
+                        </StackLayout>
+                    </ViewCell.View>
+                </ViewCell>
+            </DataTemplate>
+            <DataTemplate x:Key="toTemplate">
+                <ViewCell>
+                    <ViewCell.View>
+                        <StackLayout Orientation="Horizontal" Spacing="10">
+                            <Label Text="{Binding sendDate}"/>
+                            <Label Text="{Binding message}"/>
+                        </StackLayout>
+                    </ViewCell.View>
+                </ViewCell>
+            </DataTemplate>
+            <local:ChatDataTemplateSelector x:Key="chatDataTemplateSelector" fromTemplate="{StaticResource fromTemplate}" toTemplate="{StaticResource toTemplate}"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    <ListView BackgroundColor="Black" x:Name="listMessages" HasUnevenRows="True" ItemTemplate="{StaticResource chatDataTemplateSelector}"/>
 </ContentPage>
