--- a/LoveFinder/LoveFinder/Views/EditPicturePage.xaml
+++ b/LoveFinder/LoveFinder/Views/EditPicturePage.xaml
@@ -3,46 +3,30 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LoveFinder.Views.EditPicturePage">
     <ContentPage.Content>
-        <ScrollView>
-        <StackLayout BackgroundColor="#1b1b1b">
-            <Frame CornerRadius="20" Padding="0" Margin="70,5,70,10">
-                <Image x:Name="pic1" Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
-                    <Image.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped_1" NumberOfTapsRequired="1"/>
-                    </Image.GestureRecognizers>
-                </Image>
-            </Frame>
-            <Frame CornerRadius="20" Padding="0" Margin="35,0,200,0">
-                <Image x:Name="pic2" Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
-                    <Image.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped_2" NumberOfTapsRequired="1"/>
-                    </Image.GestureRecognizers>
-                </Image>
-            </Frame>
-            <Frame CornerRadius="20" Padding="0" Margin="200,-131,35,0">
-                <Image x:Name="pic3" Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
-                    <Image.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped_3" NumberOfTapsRequired="1"/>
-                    </Image.GestureRecognizers>
-                </Image>
-            </Frame>
-            <Frame CornerRadius="20" Padding="0" Margin="35,30,200,0">
-                <Image x:Name="pic4" Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
-                    <Image.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped_4" NumberOfTapsRequired="1"/>
-                    </Image.GestureRecognizers>
-                </Image>
-            </Frame>
-            <Frame CornerRadius="20" Padding="0" Margin="200,-131,35,30">
-                <Image x:Name="pic5" Source="placeholderport.png" HorizontalOptions="Center" VerticalOptions="Center">
-                    <Image.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped_5" NumberOfTapsRequired="1"/>
-                    </Image.GestureRecognizers>
-                </Image>
-            </Frame>
-                <Button Style="{StaticResource Orangebtn}" x:Name="Save" Text="Opslaan" Clicked="Save_Clicked"/>
-                <Button Style="{StaticResource Orangebtn}" x:Name="Back" Text="Terug" Clicked="Back_Clicked" Margin="0,0,0,10"/>
-            </StackLayout>
-        </ScrollView>
+        <StackLayout BackgroundColor="#292929">
+            <ScrollView>
+                <Grid Margin="20,10,20,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="80"/>
+                        <RowDefinition Height="80"/>
+                        <RowDefinition Height="80"/>
+                        <RowDefinition Height="80"/>
+                        <RowDefinition Height="80"/>
+                        <RowDefinition Height="80"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <ImageButton x:Name="profilepic" BackgroundColor="#292929" Source="placeholderport.png" Grid.Column="1" Grid.ColumnSpan="2" Grid.RowSpan="2" Clicked="profilepic_Clicked"/>
+                    <ImageButton x:Name="pic2" BackgroundColor="#292929" Source="placeholderport.png" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Grid.RowSpan="2" Clicked="pic2_Clicked"/>
+                    <ImageButton x:Name="pic3" BackgroundColor="#292929" Source="placeholderport.png" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" Grid.RowSpan="2" Clicked="pic3_Clicked"/>
+                    <ImageButton x:Name="pic4" BackgroundColor="#292929" Source="placeholderport.png" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="4" Grid.RowSpan="2" Clicked="pic4_Clicked"/>
+                    <ImageButton x:Name="pic5" BackgroundColor="#292929" Source="placeholderport.png" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="4" Grid.RowSpan="2" Clicked="pic5_Clicked"/>
+                </Grid>
+            </ScrollView>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
